v0.4 fixed proyectos view on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -484,7 +484,7 @@ main,
 #contacto {
   position: relative;
   background-color: #161616;
-  height: 120vh;
+  height: 150vh;
 }
 
 .wave-end {
